charts/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parking-spot-tracker-svc
  namespace: parkers
spec:
  selector:
    app: parking-spot-tracker
  ports:
  - port: 3000
    targetPort: 3000
